# bielik-entity-familiarity

./: .gitignore  README.md  pyproject.toml
data/: README.md  entities.csv  entities_athletes.csv  entities_cities.csv  entities_musicians.csv  entities_writers.csv
scripts/: analyze_language_transfer.py  analyze_steering.py  analyze_v2.py  behavioral_axis.py  build_dataset_v2.py  domain_generalization.py  p2_baselines.py  p2_calibration.py  p2_entity_disjoint_transfer.py  p2_generate_eval_subset.py  p2_heldout_direction.py  p2_incremental_validity.py  p2_lexical_baselines.py  p2_refusal_separation.py  p2_rq4.py  p2_second_judge.py  p2_stats_hardening.py  p2_three_way_judge.py  p2_tokenizer_check.py  run_language_transfer.py  run_template_control.py  run_v2_campaign.py
src/bielik_hallu/dataset/: candidates_domains.py
src/bielik_hallu/dataset/v2/: __init__.py  fabricate.py  harvest.py  templates.py
