[project]
name = "bielik-entity-familiarity"
version = "0.1.0"
description = "Graded entity-familiarity readouts in language models: Polish adaptation, cross-language robustness, and refusal steering."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.44",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "pyarrow>=17",
    "matplotlib>=3.9",
    "anthropic>=0.34",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bielik_hallu"]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
